syntax = "proto3";

package pb;

option go_package = "./";

service CompanyService {
  rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse) {}
  rpc FindOne(GetOneRequest) returns (GetOneResponse) {}
  rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse) {}
  rpc UpdateCompany(PatchRequest) returns (PatchResponse) {}

}


// CreateProduct

message CreateCompanyRequest {
  string name = 1;
  string description = 2;
  int64 employees = 3;
  bool registered = 4;
  string type = 5;

}
message CreateCompanyResponse {
  int64 status = 1;
  string error = 2;
  string id = 3;
}

// FindOne
message GetOneRequest {
  string id = 1;
}
message GetOneData{
  string id = 1;
  string name = 2;
  string description = 3;
  int64 employees = 4;
  bool registered = 5;
  string type = 6;
}
message GetOneResponse {
  int64 status = 1;
  string error = 2;
  GetOneData data = 3;
}

message DeleteCompanyRequest {
  string id = 1;
}


message DeleteCompanyResponse {
  string msg = 1;
}

message PatchRequest {
  string id = 1 ;
  string name = 2;
  string description = 3;
  int64 employees = 4;
  bool registered = 5;
  string type = 6;
}
message PatchResponse {
  string msg = 1;
}